:hammer: changed metadata in the app

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,13 @@
       content="Speech Testing Web App"
     />
     <meta property="og:image" content="%PUBLIC_URL%/Background.png" />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="web app" />
+    <meta name="theme-color" content="#1F1F1F" />
+    <meta property="og:title" content="Speech-to-Text Tester" />
+    <meta property="og:description" content="You can test your speech with this app and it will convert it to the text" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:url" content="https://react-speech-to-text-xi.vercel.app/" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/microphone.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Microphone Tester</title>
+    <title>Speech-to-Text Tester</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
