--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="%PUBLIC_URL%/Background.png" />
     <meta property="og:type" content="web app" />
     <meta name="theme-color" content="#1F1F1F" />
-    <meta property="og:title" content="Speech-to-Text Tester" />
+    <meta property="og:title" content="Speech-Text Tester" />
     <meta property="og:description" content="You can test your speech with this app and it will convert it to the text" />
     <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <meta property="og:url" content="https://react-speech-to-text-xi.vercel.app/" />
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Speech-to-Text Tester</title>
+    <title>Speech-Text Tester</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
